--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=7.4.3",
         "guzzlehttp/guzzle": "7.4.x-dev"
     },
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "joesoeph",
