--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Send whatsapp or email to NSQ server",
     "type": "library",
     "require": {
-        "php": ">=7.4.3",
+        "php": "^7.2.5",
         "guzzlehttp/guzzle": "7.4.x-dev"
     },
     "license": "MIT",
