--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": "^7.2.5",
-        "guzzlehttp/guzzle": "7.4.x-dev"
+        "guzzlehttp/guzzle": "7.4.0"
     },
     "license": "MIT",
     "authors": [
@@ -13,7 +13,7 @@
             "email": "yusuffazeri00@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "NSQClientProducer\\": "src/NSQClientProducer/"
