--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": "^7.2.5",
-        "guzzlehttp/guzzle": "7.4.0"
+        "guzzlehttp/guzzle": "^6.1"
     },
     "license": "MIT",
     "authors": [
